--- a/src/sass/_masthead.scss
+++ b/src/sass/_masthead.scss
@@ -21,15 +21,16 @@ header.masthead {
 
 	h1 {
 		margin: 0;
-		font-size: 52px;
-		font-weight: 700;
-		line-height: 54px;
+		font-size: 62px;
+		
+		line-height: 74px;
 		color: #fff;
 
 	}
 	h2 {
 		margin: 0;
-		font-weight: 100;
+		font-family: $font-family-base;
+		font-weight: 400;
 		color: rgba(255, 255, 255, 0.851);
 
 	}
@@ -54,7 +55,7 @@ header.masthead {
 	@include media-breakpoint-up(xl) {
 		
 		h1 {
-			font-size: 3.5rem;
+			font-size: 4.5rem;
 		}
 		img{
 			width: 100%;
