--- a/src/sass/_navbar.scss
+++ b/src/sass/_navbar.scss
@@ -5,9 +5,8 @@
 	transition: background-color 0.2s ease;
 	
 	.navbar-brand {
-		font-family: $font-family-sans-serif;
-		font-weight: $font-weight-bold;
-		color: $gray-900;
+	
+
 	
 		.logo-img-white {
 			position: relative;
@@ -24,6 +23,7 @@
 		}
 	}
 	.navbar-nav {
+	
 		.nav-item {
 			&.active {
 				.nav-link {
@@ -33,7 +33,7 @@
 
 			.nav-link {
 				color: $gray-600;
-				font-family: $font-family-sans-serif;
+				font-family: $font-family-base;
 				font-weight: $font-weight-bold;
 				font-size: 0.9rem;
 				padding: 0.75rem 0;
