--- a/src/sass/_education.scss
+++ b/src/sass/_education.scss
@@ -75,9 +75,11 @@
 
  .icon-box .icon svg {
   position: absolute;
-  padding: 30px;
-  top: 5px;
-  left: 0;
+  padding: 10px;
+  top: 20px;
+  left: 15px;
+
+
 }
 
 
