--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -14,6 +14,7 @@
 @import "../sass/global.scss";
 @import "../sass/about.scss";
 @import "../sass/navbar.scss";
+@import "../sass/contact.scss";
 @import "../sass/blog.scss";
 @import "../sass/education.scss";
 @import "../sass/gallery.scss";
