--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -1,4 +1,6 @@
-// Styling for the About
+/*--------------------------------------------------------------
+# About
+--------------------------------------------------------------*/
 .about {
 
 
