--- a/src/sass/_education.scss
+++ b/src/sass/_education.scss
@@ -1,5 +1,5 @@
 /*--------------------------------------------------------------
-# Services
+# Education
 --------------------------------------------------------------*/
 
  .education {
