--- a/src/sass/_navbar.scss
+++ b/src/sass/_navbar.scss
@@ -6,8 +6,6 @@
 	
 	.navbar-brand {
 	
-
-	
 		.logo-img-white {
 			position: relative;
 
@@ -36,13 +34,38 @@
 				font-family: $font-family-base;
 				font-weight: $font-weight-bold;
 				font-size: 0.9rem;
-				padding: 0.75rem 0;
+				margin: 1em;
+				&:hover,
+				&:active {
+					color: $primary;
+				}
+			}
+
+			.btn-outline-donate {
+				color: fade-out($white, .3);
+				font-family: $font-family-base;
+				font-weight: $font-weight-bold;
+				font-size: 0.9rem;
+			
+				&:hover,
+				&:active {
+					color: $primary;
+				}
+			
+			}
+
+			.btn-outline-sign {
+				color: fade-out($white, .3);
+				font-family: $font-family-base;
+				font-weight: $font-weight-bold;
+				font-size: 0.9rem;
 				&:hover,
 				&:active {
 					color: $primary;
 				}
 			}
 		}
+	
 	}
 	@include media-breakpoint-up(lg) {
 		// Base styling for the navbar - screen sizes greater than the large breakpoint
@@ -56,7 +79,7 @@
 		}
 		.navbar-nav {
 			.nav-item {
-			
+				
 				.nav-link {
 					color: fade-out($white, .3);
 					margin: 0 1rem;
@@ -65,13 +88,44 @@
 						color: $white;
 					}
 				}
-				&:last-child {
-					.nav-link {
-						
+			
+				.btn-outline-donate {
+			
+					color: fade-out($white, .3);
+					margin: 0 1rem;
+					border-radius: 20rem;
+			        border: 2px solid fade-out($white, .3);
+					font-family: $font-family-base;
+					font-weight: $font-weight-bold;
+					font-size: 0.9rem;
+					transition: ease-in-out 0.3s;
+	                background-color: transparent;
+					&:hover,
+					&:active {
+						color: $white;
+						background-color: rgb(4, 206, 51);
 					}
+				
+				
+				}
+				.btn-outline-sign {
+					color: fade-out($white, .3);
+					border-radius: 20rem;
+					margin: 0 1rem;
+					border: 2px solid fade-out($white, .3);
+					font-family: $font-family-base;
+					font-weight: $font-weight-bold;
+					font-size: 0.9rem;
+					transition: ease-in-out 0.3s;
+					background-color: transparent;
+					&:hover,
+					&:active {
+						color: $white;
+						background-color: $primary;
+					}
+				
 				}
 			}
-			
 		}
 	}
 }
@@ -85,7 +139,6 @@
 		}
 		.logo-img-white {
 			position: relative;
-
 			width: 100px;
 			height: 100px;
 			// replace the masthead.jpg image in the /img directory to change the image
@@ -106,82 +159,37 @@
 					color: $primary;
 				}
 			}
+			.btn-outline-donate {
+				color: $white;
+				border-radius: 20rem;
+				background-color: rgb(4, 206, 51);
+				border: 2px solid fade-out($white, .0);
+				font-family: $font-family-base;
+				font-weight: $font-weight-bold;
+				font-size: 0.9rem;
+				transition: ease-in-out 0.3s;
+				&:hover,
+				&:active {
+					color: fade-out($white, .3);
+				}
+			}
+			.btn-outline-sign {
+				color: $white;
+				border-radius: 20rem;
+				background-color: $primary;
+				border: 2px solid fade-out($white, .0);
+				font-family: $font-family-base;
+				font-weight: $font-weight-bold;
+				font-size: 0.9rem;
+				transition: ease-in-out 0.3s;
+				&:hover,
+				&:active {
+					color: fade-out($white, .3);
+				}
+			
+			}
+
 		}
 	}
 }
-
-@include media-breakpoint-up(lg) {
-	// Navbar styling applied when the page is scrolled
-	.site-container.navbar-scrolled #mainNav {
-		box-shadow: $box-shadow;
-		background-color: $white;
-		.navbar-brand {
-			color: $gray-900;
-			&:hover {
-				color: $primary;
-			}
-			.logo-img-white {
-				position: relative;
-	
-				width: 100px;
-				height: 100px;
-				// replace the masthead.jpg image in the /img directory to change the image
-				// if the image name change, make sure to update the url path below!
-				background-image:  url('../images/first-take-logo-black.png');
-				background-position: center;
-				background-repeat: no-repeat;
-				background-attachment: scroll;
-				background-size: cover;
-			}
-		}
-	
-		.navbar-nav {
-			.nav-item {
-				.nav-link {
-					color: $gray-900;
-					&:hover {
-						color: $primary;
-					}
-				}
-			}
-		}
-	}
-	// Navbar styling applied when the page is scrolled
-	.site-container.navbar-scrolled #mainNav {
-		box-shadow: $box-shadow;
-		background-color: $white;
-		.navbar-brand {
-			color: $gray-900;
-			&:hover {
-				color: $primary;
-			}
-			.logo-img-white {
-				position: relative;
-	
-				width: 100px;
-				height: 100px;
-				// replace the masthead.jpg image in the /img directory to change the image
-				// if the image name change, make sure to update the url path below!
-				background-image:  url('../images/first-take-logo-black.png');
-				background-position: center;
-				background-repeat: no-repeat;
-				background-attachment: scroll;
-				background-size: cover;
-			}
-		}
-	
-		.navbar-nav {
-			.nav-item {
-				.nav-link {
-					color: $gray-900;
-					&:hover {
-						color: $primary;
-					}
-				}
-			}
-		}
-	}
-}
-
-
 
